# ortho-svm

./: .gitignore  .travis.yml  Gegenbauer.java  Gegenbauer.py  Hermite.java  KFoldCrossValidator.java  LICENSE  README.md  appveyor.yml  conda_env.yml  entorno.yml  he_test.py  hermite_expressions.json  hermite_impls.py  kernel_gegenbauer.py  pyproject.toml  rbf_parallel.py  sHermite_vf1.py  shermite.py  test_hermite.py
orthosvm/: .travis.yml  __init__.py
orthosvm/gramian/: __init__.py  decorator.py  gram.py
orthosvm/kernels/: __init__.py  chebyshev.cpp  gegenbauer.cpp  herm.cpp  hermite.cpp  hermite.py  kernel_gegenbauer.py  shermite.py
orthosvm/kernels/src/: chebysh.cpp  chebyshev.hpp  gegenb.cpp  gegenbauer.hpp  herm.cpp  hermite.h  hermite.hpp
orthosvm/plots_modules/: decision.py
padierna_modules/: plots.py
resources/: breast.csv  monks-1.csv  monks-1_test.csv  regression.ipynb
resources/.ipynb_checkpoints/: classification-checkpoint.ipynb
tests/: hermite_impls.py  test_chebyshev.py  test_gegenbauer.py  test_gram_class.py  test_hermite.py  test_kernel.py
tests/datasets/: fourclass.csv  fourclass1.csv
