[tool.poetry]
name = "ortho-svm"
version = "0.2.0"
description = "Compute orthogonal polynomials to be used as kernels in Support Vector Machines"
authors = ["Edwin <developeredwin@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
scipy = "^1.4"
scikit-learn = "^0.22.1"
pybind11 = "^2.4"
cppimport = "^18.11"
numba = "^0.47.0"
pytest = "^5.3"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
