[tool.poetry]
name = "orthosvm"
version = "0.7.1"
description = "Compute orthogonal polynomials to be used as kernels in Support Vector Machines"
authors = ["Edwin <developeredwin@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/DCI-NET/orthosvm"
repository = "https://github.com/DCI-NET/orthosvm"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
scipy = "^1.4"
scikit-learn = "^0.22.1"
pybind11 = "^2.4"
cppimport = "^18.11"
numba = "^0.47.0"
pytest = "^5.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
jupyter = "^1.0.0"
nox = "^2019.11.9"
seaborn = "^0.10.0"
pandas = "^1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
